# SmartMarks

./: .env.example  .gitignore  Caddyfile  README.md  docker-compose.yml  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt
app/: .env.example  Caddyfile  globals.css  layout.tsx  page.tsx  providers.tsx
app/api/upload/: route.ts
app/components/: CTA.tsx  EmailForm.tsx  FeaturesHomePage.tsx  Footer.tsx  Header.tsx  Hero.tsx  ThemeToggle.tsx
app/contexts/: LanguageContext.tsx
app/cookie-policy/: page.tsx
app/features/: page.tsx
app/grade/: page.tsx
app/improvements/: page.tsx
app/login/: page.tsx
app/pdfresult/: page.tsx
app/privacy-policy/: page.tsx
app/results/: page.tsx
app/terms-of-service/: page.tsx
app/utils/: translations.ts
backend/: app.py  backend_handwriting.py  text_improvement.py
docker/: Dockerfile.backend  Dockerfile.backend.dockerignore  Dockerfile.frontend  Dockerfile.frontend.dockerignore
